# porghub

./: .gitignore  Dockerfile  README.md  db.py  main.py  pyproject.toml
migrations/models/: 0_20220626220812_init.sql
models/: memes.py
static/: main_20220626.css
templates/: admin.html  home.html  oldies.html  page.html  sent.html
